# bug-free-octo-engine-pypi

./: Cache  Cargo.toml  README.md  Resolvers  Rust setup  package.json  pnpm-lock.yaml  turbo.json
.cargo/: config.toml
.github/actions/setup-go/: action.yml
.github/actions/setup-node/: action.yml
.github/workflows/: bench-turbotrace-against-node-nft.yml  benchmark.yml  daily-nextjs-integration-test.yml  docker-image.yml  generator-generic-ossf-slsa3-publish.yml  nextjs-integration-test.yml  pr-clean-caches.yml  pr-go-e2e.yml  pr-go-run-examples.yml  pr-js-lint.yml  pr-js-tests-filtered.yml  pr-js-tests.yml  publish-docs-rs.yml  release.yml  snapshot.yml  test.yml  turbopack-nightly-release.yml  turborepo-release-step-2.yml  turborepo-release.yml
benchmark/: package.json
buildcontainer/: Dockerfile.base
cli/: Makefile  cross-release.yml  go.mod  go.sum  new-integration-test.mjs  package.json  turbo.json
cli/integration_tests/basic_monorepo/: run_summary.t
cli/internal/ffi/: bindings.h
cli/internal/globby/: globby_go.go  globby_rust.go
cli/internal/run/: real_run.go  run.go
cli/internal/turbostate/: turbostate.go
cli/scripts/nginx/: Dockerfile.cacher
crates/node-file-trace/src/: lib.rs  nft_json.rs
crates/turbo-tasks-build/src/: lib.rs
crates/turbo-tasks-env/src/: dotenv.rs
crates/turbo-tasks-fs/examples/: hash_directory.rs  hash_glob.rs
crates/turbo-tasks-fs/src/: lib.rs
crates/turbo-tasks-macros/src/: function_macro.rs  value_impl_macro.rs  value_trait_macro.rs
crates/turbo-tasks-memory/src/: task.rs
crates/turbo-tasks-memory/tests/: all_in_one.rs  collectibles.rs
crates/turbo-tasks-testing/src/: lib.rs
crates/turbo-tasks/src/: completion.rs  id.rs  join_iter_ext.rs  lib.rs  native_function.rs  primitives.rs  util.rs
crates/turbopack-build/src/: chunking_context.rs
crates/turbopack-cli-utils/src/: runtime_entry.rs
crates/turbopack-core/src/: changed.rs  context.rs  environment.rs  lib.rs  plugin.rs  proxied_asset.rs  reference_type.rs  source_asset.rs  source_transform.rs  virtual_asset.rs  virtual_fs.rs
crates/turbopack-css/src/: asset.rs  embed.rs  lib.rs  module_asset.rs  parse.rs
crates/turbopack-dev-server/src/: html.rs  http.rs  lib.rs
crates/turbopack-dev/src/: chunking_context.rs
crates/turbopack-ecmascript/: Cargo.toml
crates/turbopack-ecmascript-runtime/src/: build_runtime.rs  dev_runtime.rs  embed_js.rs
crates/turbopack-ecmascript/benches/: analyzer.rs
crates/turbopack-ecmascript/src/: chunk_group_files_asset.rs  lib.rs  parse.rs  static_code.rs  utils.rs
crates/turbopack-env/src/: asset.rs
crates/turbopack-json/src/: lib.rs
crates/turbopack-mdx/src/: lib.rs
crates/turbopack-node/src/: bootstrap.rs  evaluate.rs  lib.rs
crates/turbopack-static/src/: fixed.rs  lib.rs
crates/turbopack-swc-utils/src/: emitter.rs
crates/turbopack-test-utils/src/: lib.rs
crates/turbopack-tests/tests/: execution.rs  snapshot.rs
crates/turbopack/benches/: node_file_trace.rs
crates/turbopack/examples/: turbopack.rs
crates/turbopack/src/: condition.rs  evaluate_context.rs  lib.rs
crates/turbopack/tests/: node-file-trace.rs
crates/turborepo/: Cargo.toml
crates/turborepo-cache/src/: http.rs
crates/turborepo-ffi/: Cargo.toml
crates/turborepo-lib/: Cargo.toml  build.rs
crates/turborepo-lib/src/: cli.rs  lib.rs  opts.rs
crates/turborepo-lib/src/commands/: daemon.rs  mod.rs
crates/turborepo-lib/src/daemon/: client.rs  connector.rs  endpoint.rs  mod.rs  server.rs
crates/turborepo-lib/src/globwalk/: mod.rs
crates/turborepo-lib/src/globwatcher/: mod.rs
docs/: package.json
examples/non-monorepo/: package.json
my-app/: package-lock.json
shim/: Cargo.toml
shim/src/: main.rs
turborepo-tests/e2e/: package.json
(+111 files in other folders)
